package judith.week20.Schwarzwaldklinik;

public class Ambulanz {

    //vererbung von Abteilung?

    //Attribute
    public String oeffnungszeit;


    //Konstruktor
    public Ambulanz(String oeffnungszeit) {
        this.oeffnungszeit = oeffnungszeit;
    }
}
