package judith.week20.Schwarzwaldklinik;

public class Krankenhaus {

    private String khName;
}
