package judith.week20.Schwarzwaldklinik;

public class Zimmer {

    //Attribute

    public String zimmerNummer;

//Konstruktor
    public Zimmer(String zimmerNummer) {
        this.zimmerNummer = zimmerNummer;
    }
}
